--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,5 +2,8 @@
 <p> Here you can control stock and track your daily sells</p>
 
 <div>
-  
+  Admin
+  <ul>
+    <li><%= link_to 'Categories', categories_path %></li>
+  </ul>
 </div>
