--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,14 @@
 <p> Here you can control stock and track your daily sells</p>
 
 <div>
+  Finance
+  <ul>
+    <li><%= link_to 'Transactions', products_path %></li>
+  </ul>
+
   Admin
   <ul>
+    <li><%= link_to 'Products', products_path %></li>
     <li><%= link_to 'Categories', categories_path %></li>
   </ul>
 </div>
