--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -30,6 +30,10 @@
         <%= f.label :sell_price %><br>
         <%= f.text_field :sell_price, class: 'form-control'%>
       </div>
+      <div class="form-group">
+        <%= f.label :stock %><br>
+        <%= f.text_field :stock, class: 'form-control'%>
+      </div>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
