--- a/app/views/products/selling_dashboard.html.erb
+++ b/app/views/products/selling_dashboard.html.erb
@@ -48,9 +48,7 @@
 
 <script>
 $( document ).ready(function() {
-  var buttons = "<button type='button' class='add_stock btn btn-primary'>Add Stock</button>"
-  formatTable('products', 'product_modal', 'products', buttons);
-  addTableButtonAction('products','button.add_stock','product_modal','products','add_stock')
+  formatTable('products', 'product_modal', 'products');
 });
 
 </script>
