--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,14 @@
 <p> Here you can control stock and track your daily sells</p>
 
 <div>
-  Finance
+  Daily
   <ul>
-    <li><%= link_to 'Transactions', products_path %></li>
+    <li><%= link_to 'Selling Dashboard', selling_dashboard_products_path %></li>
+  </ul>
+
+  Reports
+  <ul>
+    <li><%= link_to 'Transactions', transactions_path %></li>
   </ul>
 
   Admin
