--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -19,9 +19,9 @@
       <th style="display:none;">Id</th>
       <th>Product Name</th>
       <th>Category</th>
-      <th>Unit Charge</th>
+      <th>Cost</th>
       <th>Quantity</th>
-      <th>Charge</th>
+      <th>Sell Price</th>
       <th>Description</th>
       <th></th>
     </tr>
