--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,8 @@
 
   Admin
   <ul>
-    <li><%= link_to 'Products', products_path %></li>
+    <li><%= link_to 'Providers', providers_path %></li>
     <li><%= link_to 'Categories', categories_path %></li>
+    <li><%= link_to 'Products', products_path %></li>
   </ul>
 </div>
