--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,6 +15,14 @@
         <%= f.text_field :description, class: 'form-control'%>
       </div>
       <div class="form-group">
+        <%= f.label :provider %><br>
+        <%= f.select(:provider_id,
+        Provider.all.map {|p| [ p.name, p.id ] },
+        { include_blank: true },
+        { class:'form-control' })
+      %>
+      </div>
+      <div class="form-group">
         <%= f.label :category %><br>
         <%= f.select(:category_id,
         Category.all.map {|c| [ c.name, c.id ] },
