--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,7 @@
       <th style="display:none;">Id</th>
       <th>Name</th>
       <th>Description</th>
+      <th>Provider</th>
       <th>Category</th>
       <th>Cost</th>
       <th>Sell Price</th>
@@ -32,6 +33,7 @@
         <td style="display:none;" class="id"><%= product.id %></td>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
+        <td><%= product.provider.name %></td>
         <td><%= product.category.name %></td>
         <td><%= product.cost %></td>
         <td><%= product.sell_price %></td>
