Sync up with chiro

--- a/app/views/products/add_stock.html.erb
+++ b/app/views/products/add_stock.html.erb
@@ -10,6 +10,10 @@
         <%= f.label :quantity %><br>
         <%= f.text_field :quantity, class: 'form-control' %>
       </div>
+      <div class="form-group">
+        <%= f.label :purchase_cost %><br>
+        <%= f.text_field :purchase_cost, class: 'form-control' %>
+      </div>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
