--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,8 @@
 <div>
   Daily
   <ul>
-    <li><%= link_to 'Selling Dashboard', selling_dashboard_products_path %></li>
+    <li><%= link_to 'Sell', selling_dashboard_products_path %></li>
+    <li><%= link_to 'Purchase', selling_dashboard_products_path %></li>
   </ul>
 
   Reports
