--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,7 +31,7 @@
     <% @products.each do |product| %>
       <tr>
         <td style="display:none;" class="id"><%= product.id %></td>
-        <td><%= product.name %></td>
+        <td><a onclick="openDialog('product_modal','<%= product_path(product.id) %>')"> <%= product.name %></a></td>
         <td><%= product.description %></td>
         <td><%= product.provider.name %></td>
         <td><%= product.category.name %></td>
