--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title">Add Provider</h4>
+      <h4 class="modal-title">Provider</h4>
     </div>
     <div class="modal-body">
       <div class="form-group">
