--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,10 @@
-<h1>Welcome to MR Beer Stock and Selling System</h1>
-<p> Here you can control stock and track your daily sells</p>
+<h1>MR Beer</h1>
 
 <div>
-  Daily
+  Diario
   <ul>
-    <li><%= link_to 'Sell', selling_dashboard_products_path %></li>
-    <li><%= link_to 'Purchase', selling_dashboard_products_path %></li>
+    <li><%= link_to 'Pizzara Ventas', selling_dashboard_products_path %></li>
+    <li><%= link_to 'Gastos', '' %></li>
   </ul>
 
   Reports
@@ -15,8 +14,8 @@
 
   Admin
   <ul>
-    <li><%= link_to 'Providers', providers_path %></li>
-    <li><%= link_to 'Categories', categories_path %></li>
-    <li><%= link_to 'Products', products_path %></li>
+    <li><%= link_to 'Proveedores', providers_path %></li>
+    <li><%= link_to 'Categorias', categories_path %></li>
+    <li><%= link_to 'Productos', products_path %></li>
   </ul>
 </div>
