--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,19 +3,19 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title">Add Product</h4>
+      <h4 class="modal-title">Producto</h4>
     </div>
     <div class="modal-body">
       <div class="form-group">
-        <%= f.label :name %><br>
+        <%= f.label :name, "Nombre" %><br>
         <%= f.text_field :name, class: 'form-control'%>
       </div>
       <div class="form-group">
-        <%= f.label :description %><br>
+        <%= f.label :description, "Descripcion" %><br>
         <%= f.text_field :description, class: 'form-control'%>
       </div>
       <div class="form-group">
-        <%= f.label :provider %><br>
+        <%= f.label :provider, "Proveedor" %><br>
         <%= f.select(:provider_id,
         Provider.all.map {|p| [ p.name, p.id ] },
         { include_blank: true },
@@ -23,7 +23,7 @@
       %>
       </div>
       <div class="form-group">
-        <%= f.label :category %><br>
+        <%= f.label :category, "Categoria" %><br>
         <%= f.select(:category_id,
         Category.all.map {|c| [ c.name, c.id ] },
         { include_blank: true },
@@ -31,21 +31,17 @@
       %>
       </div>
       <div class="form-group">
-        <%= f.label :cost %><br>
-        <%= f.text_field :cost, class: 'form-control'%>
-      </div>
-      <div class="form-group">
-        <%= f.label :sell_price %><br>
+        <%= f.label :sell_price, "Precio Venta" %><br>
         <%= f.text_field :sell_price, class: 'form-control'%>
       </div>
       <div class="form-group">
-        <%= f.label :stock %><br>
+        <%= f.label :stock, "Stock" %><br>
         <%= f.text_field :stock, class: 'form-control'%>
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="submit" class="btn btn-primary">Save changes</button>
+      <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+      <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
   </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
