--- a/app/views/products/sell_quantity.erb
+++ b/app/views/products/sell_quantity.erb
@@ -7,13 +7,13 @@
     </div>
     <div class="modal-body">
       <div class="form-group">
-        <%= f.label :quantity %><br>
+        <%= f.label :quantity, "Cantidad" %><br>
         <%= f.text_field :quantity, class: 'form-control' %>
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+      <button type="submit" class="btn btn-primary">Ok</button>
     </div>
   </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
