--- a/app/views/products/selling_dashboard.html.erb
+++ b/app/views/products/selling_dashboard.html.erb
@@ -11,16 +11,14 @@
   </div>
 <% end %>
 
-<h1>Products</h1>
+<h1>Pizarra De Venta</h1>
 
 <table id="products" class="datatable">
   <thead>
     <tr>
       <th style="display:none;">Id</th>
-      <th>Name</th>
-      <th>Description</th>
+      <th>Nombre</th>
       <th>Category</th>
-      <th>Stock</th>
       <th></th>
       <th></th>
     </tr>
@@ -30,9 +28,7 @@
       <tr>
         <td style="display:none;" class="id"><%= product.id %></td>
         <td><%= product.name %></td>
-        <td><%= product.description %></td>
         <td><%= product.category.name %></td>
-        <td><%= product.stock %></td>
         <td>
           <% if product.beer? %>
             <%= link_to "Porron", sell_product_path(id: product.id , quantity: 0.5), method: :post, class: "btn btn-primary"%>
