--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -3,29 +3,29 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title">Provider</h4>
+      <h4 class="modal-title">Proveedor</h4>
     </div>
     <div class="modal-body">
       <div class="form-group">
-        <%= f.label :name %><br>
+        <%= f.label :name, "Nombre" %><br>
         <%= f.text_field :name, class: 'form-control'%>
       </div>
       <div class="form-group">
-        <%= f.label :description %><br>
+        <%= f.label :description, "Descripcion" %><br>
         <%= f.text_field :description, class: 'form-control'%>
       </div>
       <div class="form-group">
-        <%= f.label :contact %><br>
+        <%= f.label :contact, "Contacto" %><br>
         <%= f.text_field :contact, class: 'form-control'%>
       </div>
       <div class="form-group">
-        <%= f.label :phone_number %><br>
+        <%= f.label :phone_number, "Telefono" %><br>
         <%= f.text_field :phone_number, class: 'form-control'%>
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="submit" class="btn btn-primary">Save changes</button>
+      <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+      <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
   </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
